refactor(news): change create and update methods to void
style: update CSS colors to use rgba(251, 251, 251) instead of rgba(255, 255, 255)

refactor(deckpresenter): remove unused methods and imports

refactor(practicepresenter): simplify stream collection toList()

style: update main gradient CSS variable name and related usages

refactor(usersettingsservice): remove unused getPreferredLocale method

refactor(statsservice): simplify DailyStats record syntax